<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout
      android:tag="@string/view_inspector_view_tag"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/boundary_menu_background"
      >
    <LinearLayout
        android:tag="@string/view_inspector_view_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_inspector_menu_item_height"
        android:orientation="horizontal"
        >
      <TextView
          android:tag="@string/view_inspector_view_tag"
          android:text="@string/view_inspector_boundary_menu_show_outline"
          style="@style/MenuTextView"
          />
      <Switch
          android:tag="@string/view_inspector_view_tag"
          android:id="@+id/outline_switch"
          style="@style/MenuSwitch"
          />
    </LinearLayout>
    <include layout="@layout/view_inspector_menu_separator"/>
    <LinearLayout
        android:tag="@string/view_inspector_view_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_inspector_menu_item_height"
        android:orientation="horizontal"
        >
      <TextView
          android:tag="@string/view_inspector_view_tag"
          android:text="@string/view_inspector_boundary_menu_show_margin"
          style="@style/MenuTextView"
          />
      <Switch
          android:tag="@string/view_inspector_view_tag"
          android:id="@+id/margin_switch"
          style="@style/MenuSwitch"
          />
    </LinearLayout>
    <include layout="@layout/view_inspector_menu_separator"/>
    <LinearLayout
        android:tag="@string/view_inspector_view_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_inspector_menu_item_height"
        android:orientation="horizontal"
        >
      <TextView
          android:tag="@string/view_inspector_view_tag"
          android:text="@string/view_inspector_boundary_menu_show_padding"
          style="@style/MenuTextView"
          />
      <Switch
          android:tag="@string/view_inspector_view_tag"
          android:id="@+id/padding_switch"
          style="@style/MenuSwitch"
          />
    </LinearLayout>
  </LinearLayout>
</merge>
