<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout
      android:tag="@string/view_inspector_view_tag"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/settings_menu_background"
      >
    <LinearLayout
        android:tag="@string/view_inspector_view_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_inspector_menu_item_height"
        android:orientation="horizontal"
        >
      <TextView
          android:tag="@string/view_inspector_view_tag"
          android:text="@string/view_inspector_settings_menu_log_view_events"
          style="@style/MenuTextView"
          />
      <Switch
          android:tag="@string/view_inspector_view_tag"
          android:id="@+id/log_view_events_switch"
          style="@style/MenuSwitch"
          />
    </LinearLayout>
    <include layout="@layout/view_inspector_menu_separator"/>
    <LinearLayout
        android:tag="@string/view_inspector_view_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_inspector_menu_item_height"
        android:orientation="horizontal"
        >
      <TextView
          android:tag="@string/view_inspector_view_tag"
          android:id="@+id/view_filter"
          android:text="@string/view_inspector_settings_menu_set_view_filter"
          style="@style/MenuTextView"
          />
    </LinearLayout>
  </LinearLayout>
</merge>
